# 401k-Optimizer

./: .dockerignore  .gitignore  Dockerfile.mcp  Dockerfile.ui  README.md  azure_extracted_portfolio.json  docker-compose-azure.yml  portfolio.json  pyproject.toml
app/: batch_processes.py  engine.py  gui.py  main.py  personas.py  planner.py  rag.py  rebalancer.py  schemas.py  upload_blobs.py  vision.py
demo/: demo.md
outputs/funds/gm/:  International Equity Fund .json  ARAIX - Ariel Fund Institutional Class .json  BlackRock US Debt Index U_A .json  Diversified Real Asset Fund .json  FIAM Small Capitalization Core Commingled Pool Class B .json  Fidelity ® Contrafund ® Commingled Pool Class S .json  Fidelity ® Growth Company Commingled Pool Class S .json  Fidelity ® Low-Priced Stock Commingled Pool Class O .json  Multi-Asset Balanced Risk Fund .json  State Street Emerging Markets Index Securities Lending Series Fund Class X .json  State Street Russell Small_Mid Cap ® Index Securities Lending Series Fund Class II .json  State Street S&P 500 ® Index Securities Lending Series Fund Class I .json  The LSV U.S. Large Cap Value Equity Fund .json  VFTNX - Vanguard FTSE Social Index Fund Institutional Shares .json
outputs/funds/truist/: Brown Advisory Small-Cap Growth Collective Trust Class 2.json  FISVX - Fidelity ® Small Cap Value Index Fund.json  HNIDX - Harbor Diversified International All Cap Fund Retirement Class.json  MFS Growth Equity Fund Class 5.json  MFS Mid Cap Value Fund Class 5.json  REEIX - RBC Emerging Markets Equity Fund Class I.json  (+6 more)
(+10 files in other folders)
