[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Portfolio Optimizer with MCP and Streamlit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.112.0",
    "fastmcp>=0.4.1",
    "pydantic>=2.8.0",
    "uvicorn>=0.30.0",
    "azure-storage-blob",
    "azure-identity",
    "openai",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "python-dotenv>=1.0.0",
    "streamlit",
    "pandas",
    "plotly",
    "pillow",
    "chromadb",
    "pymupdf",
    "yfinance",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
